welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: reassignment to val
 	a=b ;
         ^max1020:7: error: reassignment to val
     b= temp ;
      ^max1020:10: error: not found: value temp
  if (a >= 10 && a <= 20) return temp;
                                 ^